--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     >
 
@@ -17,14 +16,6 @@
         android:id="@+id/tab_host"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        >
-
-        <FrameLayout
-            android:id="@+id/tab_content"
-            android:layout_width="0dip"
-            android:layout_height="0dip"
-            android:layout_weight="0"
-            />
-    </com.example.dj0708.androiddemo20151224.custom.CustomFragmentTabHost>
+        />
 
 </LinearLayout>
