--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,100 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f0f0f0" >
+    android:layout_weight="0.0"
+    android:focusable="true"
+    android:background="#eeeeee"
+    android:focusableInTouchMode="true"
+    android:orientation="vertical" >
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingBottom="10.0dip" >
+    <ImageView
+        android:layout_width="44.0dip"
+        android:layout_height="44.0dip"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10.0dip"
+        android:src="@drawable/setting_head_icon" />
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="0.0"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:orientation="vertical" >
+    <EditText
+        android:id="@+id/userNameEditText"
+        android:layout_width="match_parent"
+        android:layout_height="50.0dip"
+        android:layout_marginLeft="12.0dip"
+        android:layout_marginRight="12.0dip"
+        android:layout_marginTop="15.0dip"
+        android:drawableLeft="@drawable/login_icon_account"
+        android:drawablePadding="15.0dip"
+        android:hint="@string/user_name_hint"
+        android:inputType="text"
+        android:paddingBottom="2.0dip"
+        android:paddingLeft="15.0dip"
+        android:paddingRight="15.0dip"
+        android:paddingTop="2.0dip"
+        android:singleLine="true"
+        android:textColorHint="#999999"
+        android:textSize="16.0sp" />
 
-            <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="22.0dip" >
+    <EditText
+        android:id="@+id/passwordEditText"
+        android:layout_width="match_parent"
+        android:layout_height="50.0dip"
+        android:layout_marginBottom="20.0dip"
+        android:layout_marginLeft="12.0dip"
+        android:layout_marginRight="12.0dip"
+        android:layout_marginTop="20.0dip"
+        android:drawableLeft="@drawable/login_icon_password"
+        android:drawablePadding="15.0dip"
+        android:ems="10"
+        android:hint="@string/password_hint"
+        android:inputType="textPassword"
+        android:paddingBottom="2.0dip"
+        android:paddingLeft="15.0dip"
+        android:paddingRight="15.0dip"
+        android:paddingTop="2.0dip"
+        android:singleLine="true"
+        android:textColorHint="#999999"
+        android:textSize="16.0sp" />
 
-                <ImageView
-                    android:layout_width="57.0dip"
-                    android:layout_height="57.0dip"
-                    android:layout_gravity="center"
-                    android:adjustViewBounds="true"
-                    android:contentDescription="@null"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/setting_head_icon" />
-
-                <ImageView
-                    android:layout_width="66.0dip"
-                    android:layout_height="66.0dip"
-                    android:layout_gravity="center"
-                    android:adjustViewBounds="true"
-                    android:contentDescription="@null"
-                    android:scaleType="centerCrop"
-                    android:visibility="visible" />
-            </FrameLayout>
-
-            <EditText
-                android:id="@+id/userNameText"
-                android:layout_width="fill_parent"
-                android:layout_height="50.0dip"
-                android:layout_marginLeft="12.0dip"
-                android:layout_marginRight="12.0dip"
-                android:layout_marginTop="15.0dip"
-                android:drawableLeft="@drawable/login_icon_account"
-                android:drawablePadding="15.0dip"
-                android:ems="10"
-                android:hint="请输入账户"
-                android:inputType="text"
-                android:paddingBottom="2.0dip"
-                android:paddingLeft="15.0dip"
-                android:paddingRight="15.0dip"
-                android:paddingTop="2.0dip"
-                android:singleLine="true"
-                android:textColorHint="#999999"
-                android:textSize="16.0sp" />
-
-            <EditText
-                android:id="@+id/passwdText"
-                android:layout_width="fill_parent"
-                android:layout_height="50.0dip"
-                android:layout_marginBottom="20.0dip"
-                android:layout_marginLeft="12.0dip"
-                android:layout_marginRight="12.0dip"
-                android:layout_marginTop="20.0dip"
-                android:drawableLeft="@drawable/login_icon_password"
-                android:drawablePadding="15.0dip"
-                android:ems="10"
-                android:hint="请输入密码"
-                android:inputType="textPassword"
-                android:paddingBottom="2.0dip"
-                android:paddingLeft="15.0dip"
-                android:paddingRight="15.0dip"
-                android:paddingTop="2.0dip"
-                android:singleLine="true"
-                android:textColorHint="#999999"
-                android:textSize="16.0sp" />
-
-            <Button
-                android:id="@+id/bnLogin"
-                android:layout_width="fill_parent"
-                android:layout_height="500.0dip"
-                android:layout_marginLeft="12.0dip"
-                android:layout_marginRight="12.0dip"
-                android:singleLine="true"
-                android:text="登录"
-                android:textColor="#ffffff"
-                android:textSize="18.0sp" />
-        </LinearLayout>
-    </LinearLayout>
-
-</RelativeLayout>
+    <Button
+        android:id="@+id/loginBtn"
+        android:layout_width="match_parent"
+        android:layout_height="50.0dip"
+        android:layout_marginLeft="12.0dip"
+        android:layout_marginRight="12.0dip"
+        android:singleLine="true"
+        android:text="@string/login_btn_title"
+        android:textColor="#ffffff"
+        android:textSize="18.0sp" />
+</LinearLayout>
